src/styles/global.css
/* ... */
.img-tile .hidden span{
  text-align: center;
  width: 100%;
}
/* .projects .film-strip{
  /* border-bottom: 2px solid var(--red); */
  /* border-top: 2px solid var(--red);
} */

.film-title{
  margin-left: var(--space-outer);
}
.img-tile .hidden{
  opacity: 0;
  margin: 0;
  align-items: center;
  position: absolute;
  display: flex;
  width: 100%;
  height: 100%;
  z-index: 2;
  top:0;
  left:0;
  color:white;
  /* font-size: var(--font-size-large); */
  font-family: var(--font-family-serif)
}
.img-tile.fade{
  opacity: 1;
}
.project__card:hover{
  color: var(--red)
}
.project__card{
  position: absolute;
  top: 0;
  left:0;
  z-index: 3;
  background-color: var(--white);
  text-align: left;
  padding: var(--space-outer);
  width: 100%;
  height: 1em;
  display: flex;
  text-decoration: none;
  flex-direction: column;
  justify-content: center;
}

.project__card img{
  width: auto;
  height: 200px;
  display: none;
}
.projects .img-tile:hover span{
opacity: 0;
}
.projects .img-tile:hover img{
  opacity: inherit;
  mix-blend-mode: inherit;
}

.projects .film-strip:hover{
  background-color: var(--red);
}
.projects .film-strip:hover .project__card{
  color: var(--red);
  border-color:var(--black);
}
.projects .film-strip:hover img{
  opacity: 0.4;
  mix-blend-mode: luminosity;
}
.projects .img-tile:hover{
  background: transparent;
}
.project__card h1{
  margin:0;
  font-family: var(--font-family-sans);
  font-size: var(--font-size-regular);
}
.projects .film-strip{
  outline: 1px dashed;
  padding-top:calc(1em + var(--space-outer-2));
}
.projects .film-strip .strip-inner{
  animation: none;
  overflow: scroll;
}
/* QPC */
.qpc-container, .qpc-container nav{
   color:#FFFFD0;
   background-color: var(--black);
   border:none;
}

.qpc-container main{
  min-height: calc(100vh - var(--space-outer-2));
}
.qpc-container nav a:hover{
  color:white;
}

section.qpc .subnav{
  z-index: 9;
  display: flex;
  max-width: 150px;
  height: calc(100vh - 40px);
  padding: var(--space-outer);
  flex-direction: column;
  position: fixed;
  right: 0;
  background-color: var(--black);
  top:0;
  justify-content: space-between;
}
.qpc-container section.qpc .subnav h1{
  margin-top:0;
}
section.projects .media .lightbox{
  position: fixed;
  top:0;
  left:0;
  padding: var(--space-outer);
  z-index: 999;
  width: calc(100vw - var(--space-outer-2));
  text-align: center;
  overflow: scroll;
  margin:0;
  height: 100vh;
  display: flex;
  justify-content: center;
}
section.projects .media .lightbox img{
  z-index: 9999;
  width: auto;
  height: calc(100vh - var(--space-outer-2));
}
section.projects .media .lightbox::before{
  background-color: var(--deepblack);
  opacity: 0.8;
  content:"";
  width: 100vw;
  height: 100vh;
  position:fixed;
  top:0;
  left:0;
  z-index: 999;
}
section.projects .media .img-wrapper.portrait-image{
  margin: var(--space-outer-2) calc(var(--space-outer-2) * 4)
}
@media (max-width: 575px) {
    .qpc-container nav, .qpc-container section.qpc .subnav{
      width: 100%;
      height: auto;
      position:relative;
      max-width: 100vw;
    }
    .qpc-container nav{
      flex-direction: row;
    }
    .qpc-container nav > *:last-child{
      position: fixed;
      bottom:var(--space-outer);
    }
    .qpc-container nav ul:first-child{
      display: flex;
      flex-direction: row;
    }
    .qpc-container nav ul:first-child li:first-child img{
      width: 100px;
      margin-right: var(--space-outer-2);
    }
    .qpc-container nav{
      width:calc(100% - var(--space-outer-2));
    }
    .qpc-container main{
      width: 100%;
      height: auto;
      padding:0;
      position:relative;
      margin-left:0;
      margin-top:0;
    }


}
@media (max-width: 575px) {
  :root{
    --space-outer: 10px;
    --space-outer-2: 20px;
  }
  nav{
    width: calc(100vw - var(--space-outer-2));
    height: auto;
    background-color: var(--white);
    max-width: 100vw;
    height: 2em;
    overflow: hidden;
    border:none;
    border-bottom:2px solid var(--red);
  }
  nav.open{
    height: 70vh;
  }
  nav h1{
    transform: none;
  }
  nav h1 br{
    display: none;
  }
  .mobile-burger{
    position: fixed;
    top: 0;
    right:var(--space-outer);
    z-index: 999;
    padding:0;
    display: block;
    list-style: none;
  }
  .mobile-burger.open li:last-child{
    display: none;
  }
  .mobile-burger.open{
    right: 0;
    top: 5px;
  }
  .mobile-burger.open li:first-child{
    transform: rotate(45deg) translateY(10px);
  }
  .mobile-burger.open li:nth-child(2){
    transform: rotate(-45deg) translateY(-7px);
  }
  .mobile-burger li{
    height: 2px;
    transform-origin: center;
    background-color: var(--red);
    width: 50px;
    margin-bottom: var(--space-outer);
    display: block;
  }
  main.full-bleed{
    width: 100%;
  }
  main{
    margin-top: 4em;
    margin-left:0;
  }
  section.about > img{
    margin-left:0;
  }
  .card .card__container{
    padding: 0;
  }
  .card .card__container.open{
    flex-direction: column;
  }
  .commercial li a {
    flex-direction: column;
  }
  .commercial li a span:first-child{
    margin-bottom: var(--space-outer)
  }
  .card .card__container.open > span{
    margin-bottom: var(--space-outer);
  }
  section.about{
   flex-direction: column; 
  }
  .container.inverted .mobile-burger li{
    background-color: var(--white);
  }
  .modal{
    width: 70vw
  }
  section.projects .subnav{
    position: relative;
    z-index: 1;
    background:transparent;
    margin:0;
    border:none;
    height: auto;
    border-top: 2px solid var(--red);
    width: calc(100% - var(--space-outer-2));
    max-width: none;
  }
  
  section.projects .subnav::before{
    content: "Projects:"
  }
  section.projects .page__container, section.projects .project__container{
    width: calc(100% - var(--space-outer-2));
  }
  section.projects .project__container{
    width: auto;
    padding:0;
  }
  section.project{
    width: 100%;
    margin:0;
  }
}

